--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "mkdir -p dist && rm -rf dist/* && tsc"
   },
   "repository": {
@@ -29,8 +29,13 @@
   },
   "homepage": "https://github.com/cytim/nodejs-typed-dotenv#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.16",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.10",
+    "@types/sinon": "^9.0.9",
+    "jest": "^26.6.3",
+    "sinon": "^9.2.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
   "dependencies": {
